<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AboutFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/register_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="ClassCube"
                    android:textColor="@color/MAIN_COLOR"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    android:layout_marginTop="98dp"
                    />


                <TextView
                    android:id="@+id/aboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="20dp"
                    android:layout_marginTop="70dp"
                    android:text="About us"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"


                    android:textColor="@color/black"
                    android:textSize="32sp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aboutContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"

                    android:justificationMode="inter_word"
                    android:text="@string/about_content"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/developah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"


                    android:text="@string/developers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/devNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"

                    android:justificationMode="inter_word"
                    android:text="@string/devs"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/credits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"

                    android:justificationMode="inter_word"
                    android:text="@string/credits"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>

</FrameLayout>